--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-hi there
+<html>
+<head>
+<meta http-equiv="refresh" content="0; url=http://tavisharmstrong.com/" />
+</head>
+<body>
+redirecting :)
+</body>
+</html
