--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <meta http-equiv="refresh" content="0; url=http://tavisharmstrong.com/" />
 </head>
 <body>
-redirecting :)
+redirecting to <a href="http://tavisharmstrong.com">http://tavisharmstrong.com</a> :)
 </body>
 </html
